--- a/demo-1/package.json
+++ b/demo-1/package.json
@@ -12,19 +12,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
+    "html-webpack-plugin": "^4.5.0",
+    "less-loader": "^7.1.0",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
     "typescript": "^4.1.2",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
+    "webpackbar": "^5.0.0-3",
     "yargs": "^16.2.0"
   },
   "dependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "css-loader": "^5.0.1",
-    "html-webpack-plugin": "^4.5.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "style-loader": "^2.0.0"
+    "react-dom": "^17.0.1"
   }
 }
