--- a/demo-1/package.json
+++ b/demo-1/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
     "build": "webpack --config ./webpack/webpack.config.js",
-    "dev": "webpack-dev-server --config ./webpack/webpack.config.js --open"
+    "dev": "webpack serve --config ./webpack/webpack.config.js --open"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
     "less-loader": "^7.1.0",
+    "node-sass": "^5.0.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "typescript": "^4.1.2",
