--- a/demo-1/tsconfig.json
+++ b/demo-1/tsconfig.json
@@ -5,14 +5,14 @@
     "compilerOptions": {
       // 基本配置
       // "outDir": "./dist/", // 编译后文件的输出地址，这里使用webpack打包，仅仅把tsc当作类型检查工具，后面也配置了noEmit
-      "sourceMap": true, //
-      "target": "ES5", // 编译成哪个版本的 es
-      "module": "ESNext", // 指定生成哪个模块系统代码
-      "lib": [
-        "dom",
-        "dom.iterable",
-        "esnext"
-      ], // 编译过程中需要引入的库文件的列表
+    //   "sourceMap": true, //
+    //   "target": "ES5", // 编译成哪个版本的 es
+    //   "module": "ESNext", // 指定生成哪个模块系统代码
+    //   "lib": [
+    //     "dom",
+    //     "dom.iterable",
+    //     "esnext"
+    //   ], // 编译过程中需要引入的库文件的列表
     //   "allowJs": true, // 允许编译 js 文件，换句话说把js文件也检查，但是需要与checkJs配套
     //   "checkJs": true,
       "jsx": "react", // 在 .tsx 文件里支持 JSX
