--- a/demo-1/package.json
+++ b/demo-1/package.json
@@ -5,9 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --watch",
     "build": "NODE_ENV=production webpack --config ./webpack/config/webpack.prod.js",
-    "dev": "NODE_ENV=development webpack-dev-server --config ./webpack/config/webpack.dev.js"
+    "dev": "NODE_ENV=development webpack-dev-server --config ./webpack/config/webpack.dev.js",
+    "watch": "NODE_ENV=development webpack-dev-server --config --watch ./webpack/config/webpack.dev.js",
+    "lint": "eslint --ext=ts,tsx src",
+    "lint:quiet": "eslint --ext=ts,tsx src --quiet",
+    "lint:fix": "eslint --ext=ts,tsx src --quiet --fix",
+    "lint:log": "eslint --ext=ts,tsx src -o ./eslint.log",
+    "test-lint": "eslint --fix ./webpack/config/webpack.dev.js"
   },
   "author": "",
   "license": "ISC",
