--- a/demo-1/package.json
+++ b/demo-1/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production webpack --config ./webpack/config/webpack.prod.js",
     "dev": "NODE_ENV=development webpack-dev-server --config ./webpack/config/webpack.dev.js",
-    "watch": "NODE_ENV=development webpack-dev-server --config --watch ./webpack/config/webpack.dev.js",
+    "watch": "NODE_ENV=development webpack-dev-server --open --watch --hot ./webpack/config/webpack.dev.js",
     "lint": "eslint --ext=ts,tsx src",
     "lint:quiet": "eslint --ext=ts,tsx src --quiet",
     "lint:fix": "eslint --ext=ts,tsx src --quiet --fix",
