--- a/demo-1/package.json
+++ b/demo-1/package.json
@@ -33,6 +33,7 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.21.5",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "less-loader": "^7.1.0",
     "node-sass": "^5.0.0",
@@ -40,6 +41,7 @@
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "typescript": "^4.1.2",
+    "url-loader": "^4.1.1",
     "webpack": "^5.10.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
