--- a/demo-1/package.json
+++ b/demo-1/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "NODE_ENV=production webpack --config ./webpack/config/webpack.prod.js",
+    "build:prod": "NODE_ENV=production webpack --config ./webpack/config/webpack.prod.js",
+    "build:dev": "NODE_ENV=devlopment webpack --config ./webpack/config/webpack.prod.js",
     "dev": "NODE_ENV=development webpack-dev-server --config ./webpack/config/webpack.dev.js",
     "watch": "NODE_ENV=development webpack-dev-server --open --watch --hot ./webpack/config/webpack.dev.js",
     "lint": "eslint --ext=ts,tsx src",
@@ -27,6 +28,7 @@
     "@typescript-eslint/parser": "^4.9.1",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
@@ -36,6 +38,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "less-loader": "^7.1.0",
+    "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
     "sass-loader": "^10.1.0",
