--- a/demo-1/package.json
+++ b/demo-1/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:prod": "NODE_ENV=production webpack --config ./webpack/config/webpack.prod.js",
-    "build:dev": "NODE_ENV=devlopment webpack --config ./webpack/config/webpack.prod.js",
+    "build:dev": "NODE_ENV=devlopment webpack --config ./webpack/config/webpack.base.js",
     "dev": "NODE_ENV=development webpack-dev-server --config ./webpack/config/webpack.dev.js",
     "watch": "NODE_ENV=development webpack-dev-server --open --watch --hot ./webpack/config/webpack.dev.js",
     "lint": "eslint --ext=ts,tsx src",
@@ -40,6 +40,8 @@
     "less-loader": "^7.1.0",
     "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
+    "postcss-loader": "^4.1.0",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
@@ -55,5 +57,17 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "browserslist": {
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ]
   }
 }
