--- a/demo-1/package.json
+++ b/demo-1/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:prod": "NODE_ENV=production webpack --config ./webpack/config/webpack.prod.js",
-    "build:dev": "NODE_ENV=devlopment webpack --config ./webpack/config/webpack.base.js",
+    "build": "NODE_ENV=production webpack --config ./webpack/config/webpack.prod.js",
     "dev": "NODE_ENV=development webpack-dev-server --config ./webpack/config/webpack.dev.js",
     "watch": "NODE_ENV=development webpack-dev-server --open --watch --hot ./webpack/config/webpack.dev.js",
     "lint": "eslint --ext=ts,tsx src",
@@ -44,17 +43,21 @@
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
     "sass-loader": "^10.1.0",
+    "size-plugin": "^2.0.1",
+    "speed-measure-webpack-plugin": "^1.3.3",
     "style-loader": "^2.0.0",
     "typescript": "^4.1.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.10.0",
     "webpack-cli": "^3.3.12",
+    "webpack-dashboard": "^3.2.1",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.4.0",
     "webpackbar": "^5.0.0-3",
     "yargs": "^16.2.0"
   },
   "dependencies": {
+    "antd": "^4.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
