--- a/vue+webpack+t3/.babelrc
+++ b/vue+webpack+t3/.babelrc
@@ -7,7 +7,7 @@
                 "useBuiltIns": "usage"
             }
         ],
-        "@babel/preset-typescript"
+        // "@babel/preset-typescript"
     ],
     "plugins": [
 		"@babel/proposal-class-properties",
