--- a/vue+webpack+t3/package.json
+++ b/vue+webpack+t3/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "webpack --config ./webpack/webpack.base.js",
     "lint": "eslint --fix --ext .js --ext .vue src",
+    "ptest": "cross-env NODE_ENV=production webpack serve --config ptest/webpack.test.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.prod.js",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack/webpack.dev.js"
+    "start": "cross-env NODE_ENV=development webpack serve --config ./webpack/webpack.dev.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.10",
@@ -22,7 +23,9 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^7.1.2",
     "copy-webpack-plugin": "^6.0.3",
+    "core-js": "^3.9.1",
     "cross-env": "^7.0.3",
     "css-loader": "^5.1.3",
     "eslint": "^7.22.0",
@@ -36,15 +39,14 @@
     "ts-loader": "^8.0.18",
     "typescript": "^4.2.3",
     "vue-loader": "^16.1.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.28.0",
+    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
     "@types/lodash": "^4.14.168",
     "axios": "^0.21.1",
-    "core-js": "^3.9.1",
     "lodash": "^4.17.21",
     "vue": "^3.0.7",
     "vue-router": "^4.0.5",
