--- a/vue+webpack+t3/package.json
+++ b/vue+webpack+t3/package.json
@@ -48,6 +48,7 @@
     "@types/lodash": "^4.14.168",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
+    "markdown-it": "^12.0.6",
     "three": "^0.127.0",
     "vue": "^3.0.7",
     "vue-router": "^4.0.5",
