--- a/vue+webpack+t3/.babelrc
+++ b/vue+webpack+t3/.babelrc
@@ -1,16 +1,20 @@
 {
-    "presets": [
-        [
-            "@babel/preset-env",
-            {
-                "corejs": "3",
-                "useBuiltIns": "usage"
-            }
-        ],
-        // "@babel/preset-typescript"
-    ],
-    "plugins": [
-		"@babel/proposal-class-properties",
-		"@babel/proposal-object-rest-spread"
-	]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "corejs": "3",
+        "useBuiltIns": "usage"
+      }
+    ]
+    // "@babel/preset-typescript"
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "corejs": 3 // 指定 runtime-corejs 的版本，目前有 2 3 两个版本
+      }
+    ]
+  ]
 }
