--- a/vue+webpack+t3/package.json
+++ b/vue+webpack+t3/package.json
@@ -15,10 +15,12 @@
     "@babel/core": "^7.13.10",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-typescript": "^7.13.0",
     "@vue/compiler-sfc": "^3.0.7",
+    "awesome-skeleton": "^0.1.5",
     "babel": "^6.23.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -28,6 +30,7 @@
     "core-js": "^3.9.1",
     "cross-env": "^7.0.3",
     "css-loader": "^5.1.3",
+    "draw-page-structure": "^1.0.8",
     "eslint": "^7.22.0",
     "eslint-plugin-vue": "^7.8.0",
     "file-loader": "^6.2.0",
@@ -45,12 +48,13 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "@findify/skeleton-generator": "^0.0.16",
     "@types/lodash": "^4.14.168",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
     "markdown-it": "^12.0.6",
     "three": "^0.127.0",
-    "vue": "^3.0.7",
+    "vue": "^3.1.1",
     "vue-router": "^4.0.5",
     "vuex": "^3.6.2"
   }
