--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 # build tools
-node_modules
-build
-dist
+**/node_modules
+**/build
 
 # logfiles
 *.log
 .idea/
 .vscode/
+*.lock
 
 #mac
 *.DS_Store
