--- a/demo-html/package.json
+++ b/demo-html/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.11.0",
-    "webpack-cli": "^4.2.0"
+    "html-webpack-plugin": "^5.3.2",
+    "webpack": "^5.41.0",
+    "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "axios": "^0.21.1"
   }
 }
