--- a/vue+webpack+t3/package.json
+++ b/vue+webpack+t3/package.json
@@ -8,14 +8,14 @@
     "lint": "eslint --fix --ext .js --ext .vue src",
     "ptest": "cross-env NODE_ENV=production webpack serve --config ptest/webpack.myLoader.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.prod.js",
-    "start": "cross-env NODE_ENV=development webpack serve --config ./webpack/webpack.dev.js"
+    "start": "cross-env NODE_ENV=development webpack serve --config ./webpack/webpack.dev.js",
+    "chalk:test": "cross-env TTT=123 node ./test.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.10",
     "@babel/core": "^7.13.10",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
-    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-typescript": "^7.13.0",
@@ -48,9 +48,12 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@findify/skeleton-generator": "^0.0.16",
     "@types/lodash": "^4.14.168",
     "axios": "^0.21.1",
+    "css": "^3.0.0",
+    "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
     "markdown-it": "^12.0.6",
     "three": "^0.127.0",
