--- a/demo-html/package.json
+++ b/demo-html/package.json
@@ -4,17 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "sh ./test.sh",
     "build": "webpack --config ./webpack/webpack.config.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.41.0",
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "commander": "^8.0.0",
+    "update-notifier": "^5.1.0"
   }
 }
