--- a/vue+webpack+t3/.babelrc
+++ b/vue+webpack+t3/.babelrc
@@ -17,15 +17,15 @@
     // "@babel/preset-typescript"
   ],
   "plugins": [
-    [
-      "@babel/plugin-transform-runtime",
-      {
-        "absoluteRuntime": false,
-        "corejs": 3,
-        "helpers": true,
-        "regenerator": true,
-        "version": "7.0.0-beta.0"
-      }
-    ]
+    // [
+    //   "@babel/plugin-transform-runtime",
+    //   {
+    //     "absoluteRuntime": false,
+    //     "corejs": 3,
+    //     "helpers": true,
+    //     "regenerator": true,
+    //     "version": "7.0.0-beta.0"
+    //   }
+    // ]
   ]
 }
