--- a/rollup_ts_demo/package.json
+++ b/rollup_ts_demo/package.json
@@ -2,5 +2,12 @@
   "name": "rollup_ts_demo",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup --config rollup.config.js"
+  },
+  "devDependencies": {
+    "rollup": "^2.56.3"
+  }
 }
