--- a/demo-js/package.json
+++ b/demo-js/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack --config ./webpack.config.js"
+    "build": "webpack --config ./webpack.config.js"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
