command doesn't work: 'yarn upgrade <package> --lastest'

--- a/demo-html/package.json
+++ b/demo-html/package.json
@@ -5,15 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "sh ./test.sh",
-    "build": "webpack --config ./webpack/webpack.config.js"
+    "build": "webpack --config ./webpack/webpack.config.js",
+    "dev": "webpack serve --config ./webpack/webpack.config.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^6.4.0",
     "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.4.2",
+    "style-loader": "^3.3.0",
     "webpack": "^5.41.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
     "axios": "^0.21.1",
