--- a/post_css_demo/package.json
+++ b/post_css_demo/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-
+    "autoprefixer": "^10.3.7",
+    "postcss": "^8.3.9"
   }
 }
