--- a/phaser_demo/package.json
+++ b/phaser_demo/package.json
@@ -8,11 +8,13 @@
     "build": "cross-env NODE_ENV=production webpack --progress"
   },
   "dependencies": {
-    "phaser": "^3.24.1"
+    "phaser": "^3.55.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
     "@types/node": "^14.14.10",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
@@ -30,9 +32,10 @@
     "prettier": "^2.2.1",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.0.3",
-    "ts-loader": "^8.0.11",
+    "ts-loader": "^9.2.6",
     "typescript": "^4.1.2",
     "webpack": "^5.9.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
   },
