--- a/vite_demo/package.json
+++ b/vite_demo/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.0",
+    "@vitejs/plugin-vue-jsx": "^1.2.0",
     "typescript": "^4.4.3",
     "vite": "^2.5.10",
     "vue-tsc": "^0.3.0"
